# disco_dep

./: Cargo.toml  README.md  meson.build  meson_options.txt
csp_sys/: Cargo.toml  csp.h  meson.build
csp_sys/src/: connection.rs  csp_error.rs  csp_sys.rs  lib.rs  malloc_sys.rs  malloced.rs  malloced_slice.rs  packet.rs  socket.rs
include/csp_to_csh_example/: csp_to_csh_example.h
rust_example_project/: Cargo.toml  meson.build
rust_example_project/src/: lib.rs  slash_test.rs
slash_sys/: Cargo.toml  meson.build  slash.h
slash_sys/src/: arg_parse.rs  lib.rs  slash.rs  slash_error.rs  slash_exit_code.rs
src/: c_examples.rs  csp_examples.rs  csp_sys.rs  lib.rs  slash.rs  slash_example.rs  test_examples.rs
src/sys/: mod.rs  slash.rs
src/sys/slash/: mod.rs  slash.rs  slash_exit_code.rs  slash_sys.rs
